force-app/main/default/objects/DN_Account_Sales_Analytics__c/DN_Account_Sales_Analytics__c.object-meta.xml
<CustomObject>
    <label>DN Account Sales Analytics</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>DN Account Sales Analytics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DN Account Sales Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>