force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DN Account Sales Analytics</relationshipLabel>
    <relationshipName>DN_Account_Sales_Analytics</relationshipName>
    <type>Lookup</type>
</CustomField>