force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/Biomend_Biomend_Extend_Change__c.field-meta.xml
<CustomField>
    <fullName>Biomend_Biomend_Extend_Change__c</fullName>
    <formula>If(Biomend_Biomend_Extend_PYTD__c &gt;0,(Biomend_Biomend_Extend_YTD__c -Biomend_Biomend_Extend_PYTD__c  )/ Biomend_Biomend_Extend_PYTD__c , 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biomend/Biomend Extend% Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>