force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/Biomend_Biomend_Extend_YTD__c.field-meta.xml
<CustomField>
    <fullName>Biomend_Biomend_Extend_YTD__c</fullName>
    <label>Biomend/Biomend Extend YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>