force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/Colla_All_Products_Change__c.field-meta.xml
<CustomField>
    <fullName>Colla_All_Products_Change__c</fullName>
    <formula>If( Colla_All_Products_PYTD__c &gt;0,(  Colla_All_Products_YTD__c - Colla_All_Products_PYTD__c  )/  Colla_All_Products_PYTD__c , 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Colla (All Products) % Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>