force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/Colla_All_Products_FPY__c.field-meta.xml
<CustomField>
    <fullName>Colla_All_Products_FPY__c</fullName>
    <label>Colla (All Products) FPY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>