force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/Puros_Block_FPY__c.field-meta.xml
<CustomField>
    <fullName>Puros_Block_FPY__c</fullName>
    <label>Puros Block FPY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>