force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/Puros_CC_Mix_FPY__c.field-meta.xml
<CustomField>
    <fullName>Puros_CC_Mix_FPY__c</fullName>
    <label>Puros CC Mix FPY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>