force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/Puros_Cortical_Change__c.field-meta.xml
<CustomField>
    <fullName>Puros_Cortical_Change__c</fullName>
    <formula>If(Puros_Cortical_PYTD__c &gt;0,( Puros_Cortical_YTD__c -Puros_Cortical_PYTD__c  )/ Puros_Cortical_PYTD__c , 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Puros Cortical% Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>