force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/Puros_Cortical_PYTD__c.field-meta.xml
<CustomField>
    <fullName>Puros_Cortical_PYTD__c</fullName>
    <label>Puros Cortical PYTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>