force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/Revitalize_Abutments_Change__c.field-meta.xml
<CustomField>
    <fullName>Revitalize_Abutments_Change__c</fullName>
    <formula>If( Revitalize_Abutments_PYTD__c&gt;0,( Revitalize_Abutments_YTD__c- Revitalize_Abutments_PYTD__c )/  Revitalize_Abutments_PYTD__c, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revitalize Abutments% Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>