force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/Revitalize_Abutments_YTD__c.field-meta.xml
<CustomField>
    <fullName>Revitalize_Abutments_YTD__c</fullName>
    <label>Revitalize Abutments YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>