force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/SRM_Change__c.field-meta.xml
<CustomField>
    <fullName>SRM_Change__c</fullName>
    <formula>If( SRM_PYTD__c&gt;0,(  SRM_YTD__c- SRM_PYTD__c )/  SRM_PYTD__c, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SRM% Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>