force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/SRM_FPY__c.field-meta.xml
<CustomField>
    <fullName>SRM_FPY__c</fullName>
    <label>SRM FPY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>