force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Key</fullName>
            </value>
            <value>
                <fullName>Regen</fullName>
            </value>
            <value>
                <fullName>ZFX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>