force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/ZFX_CAPITAL_EQUIPMENT_CHANGE__c.field-meta.xml
<CustomField>
    <fullName>ZFX_CAPITAL_EQUIPMENT_CHANGE__c</fullName>
    <formula>If(ZFX_CAPITAL_EQUIPMENT_YTD__c&gt;0,( ZFX_CAPITAL_EQUIPMENT_YTD__c - ZFX_CAPITAL_EQUIPMENT_PYTD__c )/ ZFX_CAPITAL_EQUIPMENT_PYTD__c, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZFX CAPITAL EQUIPMENT % CHANGE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>