force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/ZFX_CAPITAL_EQUIPMENT_FPY__c.field-meta.xml
<CustomField>
    <fullName>ZFX_CAPITAL_EQUIPMENT_FPY__c</fullName>
    <label>ZFX CAPITAL EQUIPMENT FPY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>