force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/ZFX_CROWN_BRIDGE_PARTS_CHANGE__c.field-meta.xml
<CustomField>
    <fullName>ZFX_CROWN_BRIDGE_PARTS_CHANGE__c</fullName>
    <formula>If(ZFX_CROWN_BRIDGE_PARTS_PYTD__c&gt;0,( ZFX_CROWN_BRIDGE_PARTS_YTD__c-ZFX_CROWN_BRIDGE_PARTS_PYTD__c )/ ZFX_CROWN_BRIDGE_PARTS_PYTD__c, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZFX CROWN &amp; BRIDGE PARTS% CHANGE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>