force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/ZFX_CROWN_BRIDGE_PARTS_YTD__c.field-meta.xml
<CustomField>
    <fullName>ZFX_CROWN_BRIDGE_PARTS_YTD__c</fullName>
    <label>ZFX CROWN &amp; BRIDGE PARTS YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>