force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/ZFX_MILLED_COMPONENTS_ABUTMENTS_C_CHANGE__c.field-meta.xml
<CustomField>
    <fullName>ZFX_MILLED_COMPONENTS_ABUTMENTS_C_CHANGE__c</fullName>
    <formula>If( ZFX_MILLED_COMPONENTS_ABUTMENTS_C_PYTD__c &gt;0,( ZFX_MILLED_COMPONENTS_ABUTMENTS_C_YTD__c-ZFX_MILLED_COMPONENTS_ABUTMENTS_C_PYTD__c )/ ZFX_MILLED_COMPONENTS_ABUTMENTS_C_PYTD__c, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZFX MILLED COMPONENTS-ABUTMENTS C%CHANGE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>