force-app/main/default/objects/DN_Account_Sales_Analytics__c/fields/ZFX_MILLED_COMPONENTS_ABUTMENTS_C_FPY__c.field-meta.xml
<CustomField>
    <fullName>ZFX_MILLED_COMPONENTS_ABUTMENTS_C_FPY__c</fullName>
    <label>ZFX MILLED COMPONENTS-ABUTMENTS C FPY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>