force-app/main/default/objects/DN_Account_Sales_Analytics__c/recordTypes/DN_Key_Products_Sub_Summary.recordType-meta.xml
<RecordType>
    <fullName>DN_Key_Products_Sub_Summary</fullName>
    <active>true</active>
    <label>DN Key Products Sub Summary</label>
</RecordType>